# rag-investment

./: .dockerignore  .env.production.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  BATTERY_ANSWERS.md  Dockerfile  MIGRATION_CHECKLIST.md  PROJECT.md  README.md  checklist.txt  docker-compose.yml  pyproject.toml  render.yaml  requirements-backend.txt  requirements-dev.txt  requirements.txt  run.sh
.github/workflows/: ci.yml
backend/: demo_router.py  main.py  rate_limiter.py
docs/: architecture.md  data_processing_agreement.md  privacy_policy.md
frontend/: Dockerfile  package-lock.json  package.json
migrations/: 001_usage_insights_artifacts.sql  002_subscriptions_orgs_jobs.sql  003_cloud_credentials.sql  004_is_demo_flag.sql  005_users_table.sql  006_discussion_user_id.sql  007_vector_dim_1024.sql  008_trial_system.sql  009_case_chats.sql  010_demo_system.sql  011_demo_sessions_contact_info.sql
nginx/: nginx.conf
scripts/: backfill_embeddings.py  backfill_image_descriptions.py  backfill_image_embeddings.py  eval_retrieval.py  fetch_epstein_data.py  fetch_epstein_pdfs.py  generate_secrets.py  ingest_documents.py  ingest_epstein.py  ingest_images.py  manage_access_codes.py  run_migrations.py  scrape_epstein_files.py  setup_database.py
tests/: golden_qa.json  test_answer_quality_controls.py  test_billing.py  test_case_insights.py  test_case_intelligence.py  test_chunker.py  test_embedder_voyage_http.py  test_hybrid_search.py  test_metadata_extraction.py  test_pptx_parser.py  test_retrieval_eval.py  test_source_grounding.py
(+98 files in other folders)
